<resources>
    <string name="app_name">神马视频</string>
    <string name="recommend">首页推荐</string>
    <string name="tv_Internet">网络电视</string>
    <string name="video_type">精选专题</string>
    <string name="app_store">应用中心</string>
    <string name="user">用户</string>
    <string name="settings">我的设置</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_exit_exception">亲，程序好像挂掉了</string>
    <string name="time_colon">:</string>
    <string name="tvplay">电视剧</string>
    <string name="movie">电影</string>
    <string name="tv_show">综艺</string>
    <string name="comic">动漫</string>
    <string name="teach">美剧</string>
    <string name="documentary">韩剧</string>
    <string name="MOVIE_4K">蓝光</string>
    <string name="MOVIE_ZB">少儿</string>
    <string name="diy"></string>
    <string name="tvback_str_data_loading_error">亲，网络已断开连接了</string>
    <string name="wifi_connect">Wifi网络已经连接上了</string>
    <string name="eth_connect">有线网络已经连接上了</string>
    <string name="version_updata">开始检测最新版本</string>
    <string name="version_updata_downlond">正在后台下载,请稍后</string>
    <string name="updata_bg">壁纸更换成功</string>
    <string name="app_downlond">商城功能暂未开放...</string>
    <string name="app_downlond_no_ok">文件还没下载完成，请耐心等待</string>
    <string name="str_data_loading" />
    <string name="wifi_security_short_eap">802.1x</string>
    <string name="wifi_security_eap">802.1x EAP</string>
    <string name="wifi_security_short_wpa">WPA</string>
    <string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_short_wpa2">WPA2</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <string name="wifi_security_short_wep">WEP</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_none">无</string>
    <string name="wifi_not_in_range">不在范围内</string>
    <string name="wifi_disabled_password_failure">身份验证出现问题</string>
    <string name="wifi_disabled_network_failure">已停用状况不佳的互联网连接</string>
    <string name="wifi_disabled_generic">已停用</string>
    <string name="wifi_remembered">已保存</string>
    <string name="wifi_secured_first_item">通过%1$s进行保护</string>
    <string name="wifi_secured_second_item">，通过%1$s进行保护</string>
    <string name="display_setting_zoom_bottom_String">按"返回"鍵应用设置并返回</string>
    <string name="display_setting_zoom_oncutoff_String">选择方向键点击"OK"后使用上下左右键调整缩放比例</string>
    <string name="weather_date_today">今天</string>
    <string name="weather_date_tomorrow">明天</string>
    <string name="weather_date_after_tomorrow">后天</string>
    <string name="about_info_recover">恢复出厂值</string>
    <string name="display_setting_resolution">分辨率</string>
    <string name="display_setting_zoom">屏幕缩放</string>
    <string name="network_test_speed_test">网络测试</string>
    <string name="sleep_setting_screensaver_time">屏保时间</string>
    <string name="sleep_setting_sleep_time">休眠时间</string>
    <string name="upgrade_setting_nowversion">当前版本</string>
    <string name="upgrade_setting_newversion">最新版本</string>
    <string name="weather_setting_area_province">省、直辖市</string>
    <string name="weather_setting_area_city">市、县</string>
    <string name="upgrade_setting_info">已是最新版本，不用升级!</string>
    <string name="display_mode_time_out_title">确认修改</string>
    <string name="display_mode_time_out_desc">在  %1$d 秒之后，将会恢复原有设置，是否确定保存当前设置</string>
    <string name="popup_confirmation_dialog_Positive">确认</string>
    <string name="popup_confirmation_dialog_Negative">取消</string>
    <string name="recover_factory_settings_title">恢复提醒：</string>
    <string name="recover_factory_settings_message">是否确认恢复出厂设置？</string>
    <string name="about_setting_info_without">无</string>
    <string name="network_setting_wireless_network_pager_list_item_link_state_linking">正在连接</string>
    <string name="network_setting_wireless_network_pager_list_item_link_state_wrong">输入密码错误</string>
    <string name="network_setting_wireless_network_pager_list_item_link_state_succeed">连接成功</string>
    <string name="wifiap_pwd_notice">请输入正确的密码6位以上数字或字母</string>
    <string name="please_input_ssid">请输入热点名称</string>
    <string name="wifiap_state_turn_on">打开热点</string>
    <string name="wifiap_state_turn_off">热点关闭</string>
    <string name="wifiap_state_turn_on_succeed">打开热点成功</string>
    <string name="wifiap_state_turn_on_fail">打开热点失败</string>
    <string name="ip_error_info">输入网络信息不合法</string>
    <string name="ip_set_succes">IP设置成功</string>
    <string name="display_setting_ntsc">NTSC</string>
    <string name="display_setting_pal">PAL</string>
    <string name="networkspeed_title">当前网速：</string>
    <string name="networkspeed_unit">kbps</string>
    <string name="none_name">请输入名称</string>
    <string name="none_password">请输入密码</string>
    <string name="illegal_password">密码不合标准，要求8位以上数字或英文</string>
    <string name="set_failed">设置失败</string>
    <string name="network_linked_failed">网络连接失败</string>
    <string name="network_linked_succeed">网络连接成功</string>
    <string name="network_configuration_failed">网络配置失败</string>
    <string name="network_configuration_succeed">网络配置成功</string>
    <string name="network_disconnect">网络断开</string>
    <string name="remote_installation_help_info">在PC浏览器中访问</string>
    <string name="splash_version">Version:</string>
    <string name="exitdialog_qin">亲!</string>
    <string name="exitdialog_out">退出</string>
    <string name="exitdialog_back">返回</string>
    <string name="progress_msg">片刻之后，精彩呈现……</string>
    <string name="load_msg">精彩节目，马上就有</string>
    <string name="loading_live">检测网络或按"左右键"切换源</string>
    <string name="loading_tv">按"菜单或ok键"选择节目单</string>
    <string name="load_err">加载数据失败</string>
    <string name="play_next">不能播放，自动切换到下一个源</string>
    <string name="onbackpressed">再按一次返回退出播放</string>
    <string name="str_user_description">选中按"菜单"键或长按"OK"键</string>
    <string name="str_data_loading_error">网络故障，获取数据失败，请重试。</string>
    <string name="str_data_play_error">本集无法播放，为您播放下一集</string>
    <string name="str_data_start_loading">按菜单键可进行筛选哟</string>
    <string name="str_no_data_error">亲!没有找到视频源呢</string>
    <string name="str_collection_loading">继续上次播放</string>
    <string name="details_recommend">推荐观看</string>
    <string name="type_details_sum">共 部</string>
    <string name="prepare_search">输入片名拼音的首字母，如《太极》输入TJ</string>
    <string name="search_allline">搜 索</string>
    <string name="vod_onpressed_play_next">再按一次播放下一集</string>
    <string name="vod_onpressed_play_frist">已经是第一集了!!!</string>
    <string name="vod_onpressed_play_last">再按一次播放上一集</string>
    <string name="play_setting_decode">播放器解码</string>
    <string name="play_setting_playratio">播放显示比列</string>
    <string name="play_setting_definition">播放清晰度</string>
    <string name="play_setting_jump">跳过片头时间</string>
    <string name="open_ring">开启操作提示音</string>
    <string name="open_piano">开启钢琴弹奏模式</string>
    <string name="open_effciency">开启动画效果</string>
    <string name="open_blur">开启背景模糊显示</string>
    <string name="open_tvlive">直播服务器切换</string>
    <string name="image_cache">个性设置</string>
    <string name="collection_record">收藏记录</string>
    <string name="play_record">播放记录</string>
    <string name="alert_record">追剧记录</string>
    <string name="diy_tvstation">数据缓存</string>
    <string name="clear">清除</string>
    <string name="diy_theme">更换主题</string>
    <string name="renewal">更换</string>
    <string name="clear_all">全部清除</string>
    <string name="set_wifi_ap">WiFi热点</string>
    <string name="wifi_ssid_name">名称</string>
    <string name="wifi_ssid_pass">密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="show_pass">显示密码</string>
    <string name="ip">IP</string>
    <string name="tv_station">电视台</string>
    <string name="wifi_secure_type">类型</string>
    <string name="wifi_ap_name">名称</string>
    <string name="input_wifi_ap_name">ShenmaTvAP</string>
    <string name="default_wifi_ap_pass">shenma123</string>
    <string name="def_time">08:00</string>
    <string name="def_date">1月1日\n星期一</string>
    <string name="remote_tips">1、请确认远程PC端和网络机顶盒处于同一个局域网内\n2、在远程PC端上传APK文件时，请不要退出当前界面\n3、在远程PC端上传APK文件时，可以拖动到网页上传\n4、如果上传成功，界面会弹出安装提示，请选择安装\n5、如果APK过大，上传时间可能会延长，请耐心等待\n</string>
    <string name="ip_tips">注意：采用NAT网络模式的设备（比如小米2），\n上面显示的连接会是http://10.0.2.15:10101，\n连接时把10.0.2.15替换成wifi或有线网络的IP地址。</string>
    <string name="my_app_native_app">本地应用</string>
    <string name="my_app_bottom_txt">菜单更多设置</string>
    <string name="about_update_text">检测更新</string>
    <string name="empower_text">确定</string>
    <string name="user_form_name">账号</string>
    <string name="input_username">请输入账户</string>
    <string name="input_password">请输入密码</string>
    <string name="is_loading">正在登录...</string>
    <string name="is_registing">正在注册...</string>
    <string name="logout_msg">您已登录，是否注销？</string>
    <string name="no_login">尚未登录</string>
    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="forget_password_tisp">找回密码</string>
    <string name="phone_nub">邮箱/手机</string>
    <string name="input_phone">已绑定的邮箱/手机</string>
    <string name="code">验证码</string>
    <string name="send_code">获取验证码</string>
    <string name="new_password">新密码</string>
    <string name="new_password_tips">请输入新密码</string>
    <string name="phone_binding_tips">手机/邮箱绑定</string>
    <string name="input_phones">手机/邮箱</string>
    <string name="My_Account">我的账户</string>
    <string name="My_TV_series">我的追剧</string>
    <string name="My_Collection">我的收藏</string>
    <string name="History_playback">历史播放</string>
    <string name="Authority_Center">授权中心</string>
    <string name="account">账户：</string>
    <string name="Invitation_rewards">邀请奖励</string>
    <string name="wifi_invic">邀请码：</string>
    <string name="remotely">远程安装</string>
</resources>