<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting_remote"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/sm_12"
        android:paddingTop="@dimen/sm_16"
        android:paddingRight="@dimen/sm_35">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sm_2"
            android:text="@string/remotely"
            android:textColor="@color/white"
            android:textSize="@dimen/sm_46"/>

        <ImageView
            android:layout_width="@dimen/sm_10"
            android:layout_height="@dimen/sm_70"
            android:layout_marginLeft="@dimen/sm_10"
            android:src="@drawable/vod_line35" />
    </LinearLayout>

    <ImageView
        android:id="@+id/remote_installation_content_transmission_icon"
        android:layout_width="@dimen/sm_440"
        android:layout_height="@dimen/sm_132"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/sm_100"
        android:src="@drawable/transmission_icon" />

    <TextView
        android:id="@+id/remote_installation_content_url_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/remote_installation_content_transmission_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/sm_8"
        android:textColor="@color/white"
        android:textSize="@dimen/sm_23" />

    <TextView
        android:id="@+id/remote_tips_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/remote_installation_content_url_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/sm_12"
        android:text="@string/remote_tips"
        android:textColor="@color/white"
        android:textSize="@dimen/sm_23" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/remote_tips_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/sm_12"
        android:text="@string/ip_tips"
        android:textColor="@color/white"
        android:textSize="@dimen/sm_23" />

</RelativeLayout>