<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:id="@+id/member"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/user_type_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/left_panel"
            android:background="@drawable/member_left_background"
            android:layout_width="@dimen/sm_213"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/icon"
                android:layout_width="@dimen/sm_180"
                android:layout_height="@dimen/sm_60"
                android:layout_marginLeft="@dimen/sm_20"
                android:layout_marginTop="@dimen/sm_35"
                android:src="@drawable/member_icon"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>
            <ImageView
                android:id="@+id/iv_top_line"
                android:layout_width="@dimen/sm_199"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sm_15"
                android:src="@drawable/line199"
                android:layout_below="@+id/icon"/>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/ll_member"
                android:layout_width="@dimen/sm_199"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sm_10"
                android:layout_marginTop="@dimen/sm_20"
                android:layout_marginRight="@dimen/sm_10"
                android:layout_below="@+id/iv_top_line"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">
                <ImageView
                    android:id="@+id/iv_member"
                    android:layout_width="@dimen/sm_70"
                    android:layout_height="@dimen/sm_70"
                    android:src="@drawable/user_icon"/>
                <TextView
                    android:textSize="@dimen/sm_24"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/sm_10"
                    android:text="@string/no_login"
                    android:lines="2"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/iv_top_bottom"
                android:layout_width="@dimen/sm_199"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sm_20"
                android:src="@drawable/line199"
                android:layout_below="@+id/ll_member"/>
            <ScrollView
                android:paddingTop="@dimen/sm_20"
                android:paddingBottom="@dimen/sm_20"
                android:layout_width="@dimen/sm_199"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_top_bottom">
                <RadioGroup
                    android:id="@+id/rg_member"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/rb_user"
                        android:button="@null"
                        android:text="@string/My_Account" style="@style/user_leftbar_full"/>
                    <RadioButton
                        android:id="@+id/rb_user_alert"
                        android:button="@null"
                        android:text="@string/My_TV_series" style="@style/user_leftbar_full"/>
                    <RadioButton
                        android:id="@+id/rb_user_collect"
                        android:button="@null"
                        android:text="@string/My_Collection" style="@style/user_leftbar_full"/>
                    <RadioButton
                        android:id="@+id/rb_user_history"
                        android:button="@null"
                        android:text="@string/History_playback" style="@style/user_leftbar_full"/>
                    <RadioButton
                        android:id="@+id/rb_user_app"
                        android:button="@null"
                        android:text="@string/Authority_Center" style="@style/user_leftbar_full"/>



                </RadioGroup>
            </ScrollView>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/right_panel"
            android:paddingLeft="@dimen/sm_30"
            android:paddingRight="@dimen/sm_30"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/info_container"
                android:paddingLeft="@dimen/sm_32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sm_43"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true">
                <LinearLayout
                    android:gravity="bottom"
                    android:layout_gravity="left"
                    android:orientation="horizontal"
                    android:id="@+id/filter_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false">
                    <TextView
                        android:textSize="@dimen/sm_24"
                        android:textColor="#ffffffff"
                        android:gravity="bottom"
                        android:layout_gravity="right"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="筛选 : "/>
                    <TextView
                        android:textSize="@dimen/sm_20"
                        android:textColor="#ff8c8c8c"
                        android:gravity="center"
                        android:layout_gravity="bottom"
                        android:id="@+id/filter_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_weight="1"/>
                <TextView
                    android:textSize="@dimen/sm_24"
                    android:textColor="#ffffffff"
                    android:gravity="right"
                    android:layout_gravity="right"
                    android:paddingRight="@dimen/sm_20"
                    android:focusable="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_user_description"/>
            </LinearLayout>
            <TextView
                android:textSize="@dimen/sm_40"
                android:gravity="center"
                android:id="@+id/tv_no_data"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/info_container"
                android:layout_centerInParent="true"/>
            <GridView
                android:id="@+id/user_type_details_grid"
                android:focusableInTouchMode="true"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/sm_3"
                android:verticalSpacing="@dimen/sm_15"
                android:numColumns="5"
                android:layout_below="@+id/info_container"
                android:layout_alignParentLeft="true"/>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>