<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:id="@+id/inv"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/ll_type_details"
        android:paddingTop="@dimen/sm_10"
        android:paddingRight="@dimen/sm_35"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sm_13"
            android:text="@string/Invitation_rewards"
            android:textColor="@color/white"
            android:textSize="@dimen/sm_46"/>
        <ImageView
            android:layout_width="@dimen/sm_10"
            android:layout_height="@dimen/sm_70"
            android:layout_marginLeft="@dimen/sm_10"
            android:src="@drawable/vod_line35" />
        <TextView
            android:textSize="@dimen/sm_24"
            android:textColor="#FFFFFFFF"
            android:gravity="left"
            android:paddingLeft="@dimen/sm_20"
            android:paddingRight="@dimen/sm_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account" />
        <TextView
            android:textSize="@dimen/sm_30"
            android:textColor="@color/detail_point"
            android:gravity="left"
            android:id="@+id/inv_user"
            android:paddingRight="@dimen/sm_0"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
        <TextView
            android:textSize="@dimen/sm_24"
            android:textColor="#FFFFFFFF"
            android:gravity="left"
            android:paddingLeft="@dimen/sm_20"
            android:paddingRight="@dimen/sm_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_invic" />
        <TextView
            android:textSize="@dimen/sm_30"
            android:textColor="@color/white"
            android:gravity="left"
            android:id="@+id/inv_invcode"
            android:paddingRight="@dimen/sm_0"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/rl_active"
        android:paddingTop="@dimen/sm_40"
        android:visibility="visible"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <ImageView
            android:visibility="gone"
            android:id="@+id/inv_img"
            android:layout_width="@dimen/sm_300"
            android:layout_height="@dimen/sm_300"
            android:layout_marginTop="@dimen/sm_80" />
        <TextView
            android:id="@+id/ivn_text"
            android:textSize="@dimen/sm_32"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sm_50"
            android:text="" />
    </LinearLayout>
</LinearLayout>
